--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,28 @@
   margin: 16px;
   float: left;
 }
+
+.note-title {
+  font-weight: normal;
+  font-size: 1.1rem;
+  margin-bottom: 6px;
+}
+
+.note-content {
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+.copyright {
+  color: #ccc;
+}
